# vercade

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mcp-template.json  pyproject.toml  template.env
.github/workflows/: check-code.yml  check.yml
friendbot/: __init__.py  __main__.py  agent.py  discord.py  friend.py  message.py  social_media.py  trigger.py
tests/: conftest.py  test_agent.py  test_friend.py
vercade/: __init__.py  __main__.py  agent.py  discord.py  social_media.py  trigger.py
