[tool.poetry]
name = "friendbot"
version = "0.1.0"
description = ""
authors = ["David <161997989+lintyourcode@users.noreply.github.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.37.1"
python-dotenv = "^1.0.0"
discord = "^2.3.2"
litellm = "^1.61.3"
pinecone-client = {extras = ["grpc"], version = "^5.0.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.5.6"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
