[tool.poetry]
name = "vercade"
version = "0.1.0"
description = ""
authors = ["David <161997989+lintyourcode@users.noreply.github.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.37.1"
python-dotenv = "^1.0.0"
discord = "^2.3.2"
litellm = "^1.78.5"
langchain-community = "0.3.27"
protoc-gen-openapiv2 = "^0.0.1"
nest-asyncio = "^1.6.0"
fastmcp = "^2.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.5.6"
pytest-mock = "^3.14.0"
mypy = "^1.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
